--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<h1>dorr.in</h1>
+---
+layout: base
+title: dorr.in
+theme: light
+background: clear
+---
+<div class="container my-3">
+  <div class="row">
+    <div class="col">
+      <h1>Hello, world!</h1>
+    </div>
+  </div>
+</div>
